--- a/vue/index.html
+++ b/vue/index.html
@@ -49,7 +49,10 @@
     
     <article>
         <h3><a href="https://padipata.github.io/vue/yinanzazheng/">vue疑难杂症</a> - 2019-07-05 16:35:33</h3>
-         vue首页白屏（几率性） // 在config文件夹中找到index.js打开把 assetsPublicPath: '/' // 改成 assetsPublicPath: './' // 再次执行 npm run build 就可以了。  
+        vue首页白屏（几率性） // 在config文件夹中找到index.js打开把 assetsPublicPath: '/' // 改成 assetsPublicPath: './' // 再次执行 npm run build 就可以了。  消除transition闪屏 .css { -webkit-transform-style: preserve-3d; -webkit-backface-visibility: hidden; -webkit-perspective: 1000; }  history模式下404 // 服务器的404页面需要重定向到index.html(nginx) try_files $uri $uri/ /index.html;  解决vue打包vendor过大  在webpack.base.conf.js新增externals配置，表示不需要打包的文件，然后在index.html中通过CDN引入  externals: { &quot;vue&quot;: &quot;Vue&quot;, &quot;vue-router&quot;: &quot;VueRouter&quot;, &quot;vuex&quot;: &quot;Vuex&quot;, &quot;element-ui&quot;: &quot;ELEMENT&quot;, &quot;BMap&quot;: &quot;BMap&quot; }  2、使用路由懒加载
+网站被劫持植入广告  https，最稳
+ 在网站页头加入如下代码：
+&lt;style&gt; html{display : none ; } &lt;/style&gt; &lt;script&gt; if( self == top ) { document.
     </article>
     
 </div>
