--- a/mysql/mycat/index.html
+++ b/mysql/mycat/index.html
@@ -79,13 +79,13 @@
 
 <h3 id="配置a主mysql">配置A主mysql</h3>
 
-<ol>
+<ul>
 <li><p>在mysql安装目录下创建目录和文件<code>mysql/log/mysql-bin.log</code></p></li>
 
 <li><p>修改my.ini</p></li>
-</ol>
+</ul>
 
-<pre><code class="language-JavaScript">[mysqld]
+<pre><code class="language-mysql">[mysqld]
 server-id=1 #主机标示，整数
 port=3306    
 log-bin=&quot;xxx/mysql/log/mysql-bin.log&quot;  #确保此文件可写
@@ -94,30 +94,30 @@ binlog-do-db=sync_test   #需要备份数据库，多个写多行
 binlog-ignore-db=mysql #不需要备份的数据库，多个写多行
 </code></pre>
 
-<ol>
+<ul>
 <li>允许mysql远程访问(lnmp服务器需要去掉防火墙)</li>
-</ol>
+</ul>
 
-<pre><code class="language-JavaScript">mysql -uroot -proot
+<pre><code class="language-mysql">mysql -uroot -proot
 
 mysql&gt;GRANT ALL PRIVILEGES ON *.* TO 'root'@'192.168.10.*' IDENTIFIED BY 'root' WITH GRANT OPTION;
 
 mysql&gt;FLUSH PRIVILEGES;
 </code></pre>
 
-<ol>
+<ul>
 <li>重启A主mysql数据库</li>
-</ol>
+</ul>
 
 <h3 id="配置b备mysql">配置B备mysql</h3>
 
-<ol>
+<ul>
 <li><p>在mysql安装目录下创建目录和文件<code>mysql/log/mysql-bin.log</code></p></li>
 
 <li><p>修改my.ini</p></li>
-</ol>
+</ul>
 
-<pre><code class="language-JavaScript">[mysqld]
+<pre><code class="language-mysql">[mysqld]
 # add for sycn test
 server-id=2                       #从机标识
 log-bin=&quot;xxx/mysql/log/mysql-bin.log&quot; #确保此文件可写
@@ -130,13 +130,13 @@ replicate-do-db=sync_test     #只复制某个库
 replicate-ignore-db=mysql     #不复制某个库
 </code></pre>
 
-<ol>
+<ul>
 <li><p>重启B备mysql数据库</p></li>
 
 <li><p>配置B备mysql的数据来源，核实高亮处的状态是否正常。</p></li>
-</ol>
+</ul>
 
-<pre><code class="language-JavaScript">mysql -uroot -proot
+<pre><code class="language-mysql">mysql -uroot -proot
 
 mysql&gt;change master to master_host='192.168.110.1',master_port='3306',master_user='root',master_password='root';
 
