--- a/mysql/mycat/index.html
+++ b/mysql/mycat/index.html
@@ -131,6 +131,17 @@ replicate-ignore-db=mysql     #不复制某个库
 </code></pre>
 
 <ul>
+<li>允许mysql远程访问(lnmp服务器需要去掉防火墙)</li>
+</ul>
+
+<pre><code class="language-JavaScript">mysql -uroot -proot
+
+mysql&gt;GRANT ALL PRIVILEGES ON *.* TO 'root'@'192.168.10.*' IDENTIFIED BY 'root' WITH GRANT OPTION;
+
+mysql&gt;FLUSH PRIVILEGES;
+</code></pre>
+
+<ul>
 <li><p>重启B备mysql数据库</p></li>
 
 <li><p>配置B备mysql的数据来源，核实高亮处的状态是否正常。</p></li>
@@ -158,7 +169,76 @@ mysql&gt;show slave status;
 <p>主要思路：使用mycat中间件，转发sql指令到后端mysql节点。mycat不负责数据库同步。</p>
 </blockquote>
 
-<p>未完待续&hellip;</p>
+<h3 id="安装mycat">安装mycat</h3>
+
+<p>mycat可以认为它是一个数据库访问中间件，但更像ngnix等产品，具备访问路由、多表分表分片操作等功能。总之很强大。</p>
+
+<p>安装过程自己百度~~~（java环境为jdk1.7以上，否则mycat将不支持）</p>
+
+<h3 id="配置mycat">配置mycat</h3>
+
+<ul>
+<li><code>server.xml</code> ，配置访问用户及权限。修改高亮处信息，其中<code>admin</code>、<code>user</code>为访问mycat的用户，<code>TESTDB</code>为mycat虚拟的数据库，供上层应用访问。</li>
+</ul>
+
+<pre><code class="language-xml">&lt;user name=&quot;admin&quot;&gt;
+    &lt;property name=&quot;password&quot;&gt;admin&lt;/property&gt;
+    &lt;property name=&quot;schemas&quot;&gt;TESTDB&lt;/property&gt;
+&lt;/user&gt;
+&lt;user name=&quot;user&quot;&gt;
+    &lt;property name=&quot;password&quot;&gt;user&lt;/property&gt;
+    &lt;property name=&quot;schemas&quot;&gt;TESTDB&lt;/property&gt;
+    &lt;property name=&quot;readOnly&quot;&gt;true&lt;/property&gt;
+&lt;/user&gt;
+</code></pre>
+
+<p>2）schema.xml。这部分不太好理解，精简了一下，主要分schema、dataNode、dataHost三个主要配置。</p>
+
+<pre><code class="language-xml">&lt;?xml version=&quot;1.0&quot;?&gt;
+&lt;!DOCTYPE mycat:schema SYSTEM &quot;schema.dtd&quot;&gt;
+&lt;mycat:schema xmlns:mycat=&quot;http://io.mycat/&quot;&gt;
+    
+    &lt;schema name=&quot;TESTDB&quot; checkSQLschema=&quot;false&quot; sqlMaxLimit=&quot;100&quot; dataNode=&quot;dn1&quot;&gt;
+        &lt;!-- 这里不配置，代表所有的表分片到dn1节点--&gt;
+    &lt;/schema&gt;
+
+    &lt;dataNode name=&quot;dn1&quot; dataHost=&quot;localhost1&quot; database=&quot;sync_test&quot; /&gt;
+    
+    &lt;dataHost name=&quot;localhost1&quot; maxCon=&quot;1000&quot; minCon=&quot;10&quot; balance=&quot;1&quot;
+              writeType=&quot;0&quot; dbType=&quot;mysql&quot; dbDriver=&quot;native&quot; switchType=&quot;1&quot;  slaveThreshold=&quot;100&quot;&gt;
+        &lt;heartbeat&gt;select user()&lt;/heartbeat&gt;
+        &lt;!-- can have multi write hosts --&gt;
+        &lt;writeHost host=&quot;hostM1&quot; url=&quot;192.168.10.1:3306&quot; user=&quot;root&quot;  password=&quot;123456&quot;&gt;
+            &lt;!-- can have multi read hosts --&gt;
+            &lt;readHost host=&quot;hostS2&quot; url=&quot;192.168.10.2:3306&quot; user=&quot;root&quot; password=&quot;123456&quot; /&gt;
+        &lt;/writeHost&gt;
+    &lt;/dataHost&gt;
+
+&lt;/mycat:schema&gt;
+</code></pre>
+
+<h3 id="启动mycat">启动mycat</h3>
+
+<pre><code class="language-shell">cd xxx\mycat\bin
+./startup_nowrap.sh
+</code></pre>
+
+<ul>
+<li>成功启动信息</li>
+</ul>
+
+<pre><code class="language-java">MyCAT Server startup successfully. see logs in logs/mycat.log   #启动成功将看到如下信息。
+</code></pre>
+
+<h2 id="测试读写分离">测试读写分离</h2>
+
+<ul>
+<li><p>使用navicat连接mycat，操作方式和连接物理mysql库一致，用户admin，密码admin，端口8066</p></li>
+
+<li><p>在TESTDB虚拟库中，创建新表test2，增加一些数据</p></li>
+
+<li><p>查看A节点、B节点数据已同步</p></li>
+</ul>
 
 </article>
 
